# maplibreum_prototype

./: .gitignore  AGENTS.md  CHANGELOG.md  DECKGL_EXPRESSIONS_ROADMAP.md  JAVASCRIPT_INJECTION_ANALYSIS.md  MANIFEST.in  PROGRESS_REPORT_2025_10_08_FINAL.md  PROGRESS_REPORT_2025_10_08_PART2.md  PROGRESS_REPORT_2025_10_08_PHASE2_COMPLETE.md  README.md  TODO.md  check_roadmap.py  fix_roadmap2.py  fix_roadmap3.py  javascript_injection_roadmap.json  pyproject.toml  reproduce_xss.py  test_export_png.py  update_filter_symbols.py  update_geocode.py  update_pmtiles.py  update_roadmap.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy-examples.yml  deploy-unified-site.yml  docs.yml  update-maplibre-examples.yml
development/: CLUSTERING_PERFORMANCE.md  REORGANIZATION_2025_10_08.md  SUMMARY_CLEANUP_2025_10_08.md  TODO.md  benchmark_clustering.py  examples_audit_roadmap.md  test_popup_regression.py  verify_xss_fix.py
development/javascript_injection_huntdown/: JAVASCRIPT_INJECTION_ANALYSIS.md  NEXT_STEPS.md  javascript_injection_roadmap.json
development/maplibre_examples/: README.md  march_2026_roadmap.md  scrapping.py  status.json
development/reports/: PROGRESS_REPORT_2025_10_08.md  PROGRESS_REPORT_2025_10_09_TRACKING_AUDIT.md  PROGRESS_REPORT_2025_10_18_MAPLIBRE_EXAMPLES_DOCS.md  PROGRESS_REPORT_2025_10_18_clustering_benchmark.md
docs/: CDN_FALLBACKS.md  ERROR_HANDLING.md  GITHUB_PAGES.md  TODO.md  api.rst  conf.py  index.rst  maplibre_examples.md  maplibreum.rst  modules.rst  requirements.txt
docs/advanced/: protocols.md
examples/: 01_basic_usage.ipynb  02_layers_and_controls.ipynb  03_geojson_and_choropleth.ipynb  04_advanced_layers.ipynb  05_realtime_and_events.ipynb  06_clustering_and_performance.ipynb  README  README.md  clustering_large_datasets.ipynb  creative_maplibreum_examples.ipynb  event_handling.ipynb  new_features.ipynb  new_features_map.html  popup_and_float_image_examples.ipynb  sample_map.html  usage.ipynb
examples/data/: README.md
maplibreum/: __init__.py  _version.py  animation.py  babylon.py  choropleth.py  cluster.py  controls.py  controls.py.patch  core.py  custom.py  datasources.py  deckgl.py  experimental.py  expressions.py  geometry.py  layers.py  markers.py  overlays.py  pmtiles.py  protocols.py  realtime.py  sources.py  styles.py  three.py  threejs.py  timedimension.py  ui.py  utils.py
maplibreum.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
maplibreum/templates/: map_template.html  sync_maps.js
misc/maplibre_examples/: README.md  scrapping.py  status.json
playwright_tests/: test_gallery_examples.py  test_measure_control_e2e.py
tests/: conftest.py  test_basic.py  test_button_control.py  test_camera_actions.py  test_cdn_fallbacks.py  test_choropleth.py  test_cluster.py  test_cluster_performance.py  test_core.py  test_draw_control.py  test_error_handling_improvements.py  test_events.py  test_expressions.py  test_feature_group.py  test_features.py  test_fit_bounds.py  test_float_image.py  test_geocoding_control.py  test_geopandas_integration.py  test_groups.py  test_image_overlay.py  test_imports.py  test_latlng_popup.py  test_map_rtl_defaults.py  test_map_rtl_mobile.py  test_maplibre_version.py  test_marker_draggable.py  test_marker_html_icons.py  test_marker_icon.py  test_measure_control.py  test_minimap.py  test_pitch_bearing.py  test_pmtiles.py  test_popup_template.py  test_property_updates.py  test_protocols.py  test_realtime.py  test_repr_html.py  test_scrapping_improvements.py  test_search_control.py  (+10 more)
tests/test_examples/: conftest.py  test_3d_terrain.py  test_add_a_3d_model_to_globe_using_threejs.py  test_add_a_3d_model_using_threejs.py  test_add_a_3d_model_with_babylonjs.py  test_add_a_3d_model_with_shadow_using_threejs.py  test_add_a_canvas_source.py  test_add_a_cog_raster_source.py  test_add_a_color_relief_layer.py  test_add_a_custom_layer_with_tiles_to_a_globe.py  test_add_a_default_marker.py  test_add_a_video.py  (+118 more)
(+298 files in other folders)
