[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maplibreum"
version = "0.1.0"
description = "A Python library for creating interactive MapLibre maps, like Folium but for MapLibre."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Your Name", email = "you@example.com"}
]
keywords = ["map", "mapping", "geospatial", "GIS", "MapLibre", "Jupyter"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "Jinja2>=3.0",
]

[project.urls]
"Source" = "https://github.com/yourusername/maplibreum"
"Issues" = "https://github.com/yourusername/maplibreum/issues"

[tool.setuptools]
package-dir = {"" = "maplibreum"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["maplibreum"]

[tool.setuptools.package-data]
maplibreum = ["templates/*.html"]

[tool.setuptools.scripts]
# If you have command-line scripts, define them here
# e.g., maplibreum = "maplibreum.cli:main"

[tool.pytest.ini_options]
testpaths = [
  "tests"
]

