[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maplibreum"
version = "0.1.0"
description = "A Python library for creating interactive MapLibre maps, like Folium but for MapLibre."
readme = "README.md"
license = "MIT"
authors = [
  {name = "Kauê de Moraes Vestena", email = "kauemv2@gmail.com"}
]
keywords = ["map", "mapping", "geospatial", "GIS", "MapLibre", "Jupyter"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "Jinja2>=3.0",

  "MarkupSafe>=2.0",
  "ipython>=8.0",
]

[project.urls]
"Source" = "https://github.com/kauevestena/maplibreum_prototype"
"Issues" = "https://github.com/kauevestena/maplibreum_prototype/issues"

[tool.setuptools]
packages = ["maplibreum"]
include-package-data = false

[tool.setuptools.package-data]
maplibreum = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = [
  "tests"
]

